appId: dev.effectlocal.chat
---
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          id: "message-input"
      - eraseText
      - inputText: "${TEXT}"
      - tapOn:
          id: "send-button"
      - extendedWaitUntil:
          visible:
            id: "send-button"
            enabled: false
          timeout: 10000
- extendedWaitUntil:
    visible: "${TEXT}"
    timeout: 30000
